# solarpred

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  quick_test.py  quickstart.py  requirements.txt  test.py
.github/workflows/: deploy.yml
datasets/: training_input.json
solar_pred/: main.py
solar_pred/core/: choose_models.py  config.py  event_handlers.py  exceptions.py  healthcheck.py  input_validation.py  logging_config.py
solar_pred/core/ai_models/: _models_config.py  _models_general.py
solar_pred/core/ai_models/neural_network/: __init__.py  model.py  model_config.py
solar_pred/core/data_processor/: data_cleaner.py  data_processor.py
solar_pred/core/get_data/: __init__.py  get_suntimes.py  get_weather.py
solar_pred/core/preprocessing/: __init__.py  _feature_engineering.py  _utils_preprocess.py  data_preprocessing.py  inverter_preprocessing.py  processor.py  sunset_sunrise_preprocessing.py  weather_preprocessing.py
solar_pred/core/weather_data/: get_weather.py
solar_pred/endpoints/: healthcheck.py  predict.py  router.py  train.py
solar_pred/input_validation/: models.py
