[project]
name = "portfolio-solar"
version = "1.0.0"
description = "Example ML pipeline to predict solar panel output"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ephem>=4.2",
    "fastapi>=0.117.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "openmeteo-requests>=1.7.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.36.0",
]
